--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,31 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .my-react-select-container .my-react-select__control {
+        @apply bg-white dark:bg-gray-900 border-2 border-neutral-300 dark:border-gray-700 hover:border-neutral-400 dark:hover:border-gray-600;
+    }
+
+    .my-react-select-container .my-react-select__control--is-focused {
+        @apply border-neutral-500 hover:border-neutral-500 dark:border-gray-700 dark:hover:border-gray-400 shadow-none;
+    }
+
+    .my-react-select-container .my-react-select__menu {
+        @apply bg-neutral-100 dark:bg-gray-900 border-2 border-neutral-300 dark:border-gray-700;
+    }
+
+    .my-react-select-container .my-react-select__option {
+        @apply text-neutral-600 dark:text-gray-300 bg-neutral-100 hover:bg-neutral-200 dark:bg-gray-900 dark:hover:bg-gray-800;
+    }
+
+    .my-react-select-container .my-react-select__indicator-separator {
+        @apply bg-neutral-400;
+    }
+
+    .my-react-select-container .my-react-select__input-container,
+    .my-react-select-container .my-react-select__placeholder,
+    .my-react-select-container .my-react-select__single-value {
+        @apply text-neutral-600 dark:text-gray-300;
+    }
+}
